--- a/dotnet/GoogleTestsNUnitSpecFlow/GoogleTestsSpecflow/GoogleTestsSpecflow.csproj
+++ b/dotnet/GoogleTestsNUnitSpecFlow/GoogleTestsSpecflow/GoogleTestsSpecflow.csproj
@@ -72,6 +72,9 @@
   <ItemGroup>
     <Compile Include="Hooks\Hooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FeatureData.cs" />
+    <Compile Include="ScenarioData.cs" />
+    <Compile Include="ScenarioSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GoogleSearchEpamResources.feature" />
